mobile fix globe and timezone spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1095,7 +1095,7 @@ img {
   }
   .container-fluid-timezone-mobile {
     display: grid;
-    margin-top: 45rem;
+    margin-top: 39rem;
     padding-bottom: 9%;
   }
   .mobile-only {
@@ -1103,7 +1103,7 @@ img {
   }
   /* globe */
   .container-fluid-globe {
-    margin-top: -13rem;
+    margin-top: -15rem;
     margin-bottom: -6%;
     overflow-x: hidden;
   }
